// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Class component render direct StrictMode wrapper around react component with a single child element 1`] = `
<StrictMode>
  <MyComponent>
    <h1>
      Hello World One
    </h1>
  </MyComponent>
</StrictMode>
`;

exports[`Class component render direct memoized wrapper around react component with a single child element 1`] = `
<Memo(MyComponent)>
  <h1>
    Hello World One
  </h1>
</Memo(MyComponent)>
`;

exports[`Class component render direct profiler wrapper around react component with a single child element 1`] = `
<Profiler
  id="profiler"
  onRender={[Function]}
>
  <MyComponent>
    <h1>
      Hello World One
    </h1>
  </MyComponent>
</Profiler>
`;

exports[`Class component render direct wrapper around react component that wraps another react component 1`] = `
<WrapperAroundMyComponent>
  <h1>
    Hello World One
  </h1>
</WrapperAroundMyComponent>
`;

exports[`Class component render direct wrapper around react component with a single child element 1`] = `
<MyComponent>
  <h1>
    Hello World One
  </h1>
</MyComponent>
`;

exports[`Class component render direct wrapper around react component with a single child element and children on second position 1`] = `
<MyComponentWithChildrenOnSecondPosition>
  <h1>
    Hello World One
  </h1>
</MyComponentWithChildrenOnSecondPosition>
`;

exports[`Class component render direct wrapper around react component with a single child element and props 1`] = `
<MyComponent
  something="beautiful"
>
  <h1>
    Hello World One
  </h1>
</MyComponent>
`;

exports[`Class component render direct wrapper around react component with multiple deep child elements 1`] = `
<MyComponent>
  <MyComponent>
    <h1>
      Hello World One
    </h1>
  </MyComponent>
</MyComponent>
`;

exports[`Class component render direct wrapper around react component with no child element 1`] = `<MyComponent />`;

exports[`Class component render fragment wrapper around react component with single text child 1`] = `
<MyComponent>
  <Fragment>
    Some random text
  </Fragment>
</MyComponent>
`;

exports[`Class component render react component with portal 1`] = `
<MyComponent>
  <h1>
    Hello World One
  </h1>
</MyComponent>
`;

exports[`Class component render wrapped in React.memo 1`] = `
<MyComponent>
  Hello World One
</MyComponent>
`;

exports[`Class component render wrapper around react component with multiple children 1`] = `
<div>
  <MyComponent>
    <h2>
      Hello World Two
    </h2>
    Some random text
  </MyComponent>
</div>
`;

exports[`Class component render wrapper around react component with single number child 1`] = `
<div>
  <MyComponent>
    1234
  </MyComponent>
</div>
`;

exports[`Class component render wrapper around react component with single text child 1`] = `
<div>
  <MyComponent>
    Some random text
  </MyComponent>
</div>
`;
